@@ -5,6 +5,12 @@
 This document provides a high-level view of the changes to {project-name} by release.
 For a detailed view of what has changed, refer to the {uri-repo}/commits/master[commit history] on GitHub.
 
+== Unreleased
+
+=== Changed
+
+* add replace_line method to Writer
+
 == 1.0.0.alpha.6 (2018-06-26) - @mojavelinux
 
 === Added
